[package]
name = "bank_of_italy_api"
version = "0.1.0"
edition = "2024"

[dependencies]
date_utils = { git = "https://github.com/mattmingit/date_utils.git", version = "0.1.0" }
reqwest = { version = "0.12.22", features = ["json"] }
rust_decimal = { version = "1.37.2", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_json_path_to_error = "0.1.5"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["macros", "parsing", "formatting", "local-offset", "serde"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
